# wildcard_matcher

./: README.md  SECURITY.MD  pyproject.toml  test_wildcard_matcher.py
.github/: CONTRIBUTING.md
.github/workflows/: mypy.yml  pylint.yml  pytest.yml
tests/: test_wildcard_matcher.py
wildcard_matcher/: __init__.py
