[tool.poetry]
name = "wildcard_matcher"
version = "0.0.3"
description = "A simple wildcard string matcher"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MIT"

homepage = "https://github.com/yaleman/wildcard_matcher"
repository = "https://github.com/yaleman/wildcard_matcher"
readme = "README.md"


#include = ["wildcard_matcher/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.12.2"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
